# PE1_PE2

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  3DMaster.qmd  5-Why-Methode.qmd  5S-Methode.qmd  6W-Methode.qmd  8D-Methode.qmd  AIDA-Modell.qmd  AKV-Aufgaben_Kompetenz_Verantwortung.qmd  AKV-Tabelle-Vorlage.xlsx  Abbildung_Amazon_Homeoffice.qmd  Abbildung_DanielDuesentrieb.qmd  Abbildung_Flammarion1888.qmd  Abbildung_In-Szeno-Technik_Rollen.qmd  Abbildung_Laplace.qmd  Abbildung_Rueckruf_Mercedes-Benz.qmd  Abfrage_Vorwissen.qmd  Abkürzungen.qmd  Analog-Digital-Wandler.qmd  Anforderungsentwicklung.qmd  Apple_A17_Pro_SoC.qmd  Attraktor.qmd  Aufgabe_Betriebsfestigkeit.qmd  Aufgabe_Bewertungsmatrix_Dateiformat.docx  Aufgabe_Bewertungsmatrix_Dateiformat.qmd  Aufgabe_Bewertungsmatrix_Magnetpendel.qmd  Aufgabe_Dokumentation_Flyer.qmd  Aufgabe_Entwicklung_Flyer.qmd  Aufgabe_Entwicklungsmethodik_Flyer.qmd  Aufgabe_Gantt_Flyer.qmd  Aufgabe_Gantt_Prüfung.qmd  Aufgabe_Lastenheft_Flyer.qmd  Aufgabe_Mindmap_Flyer.qmd  Aufgabe_Mindmap_Vorlesung.qmd  Aufgabe_Morphologischer_Kasten_Earthlander.qmd  Aufgabe_SI-Einheiten_Grundumsatz_kcal_in_Watt.qmd  Aufgabe_Starship.qmd  Aufgabe_Teamaufstellung.qmd  (+270 more)
.devcontainer/: devcontainer.json
gift/: EXAMPLE QUESTIONS for GIFT import.gift
images/: .$Aufgabe_Betriebsfestigkeit_Aufgabe.drawio.svg.bkp  .$Aufgabe_Betriebsfestigkeit_Loesung.drawio.svg.bkp  .$DIN8580_Fertigungsverfahren-Hauptgruppen_Automobilbau.drawio.svg.bkp  .$Glück.svg.bkp  .$JohariFenster.drawio.svg.bkp  .$Lebenszyklus.svg.bkp  .$Risikomatrix.drawio.png.bkp  (+40 more)
(+7 files in other folders)
